# backup-ln882x-sdk

./: CHANGELOG.md  CMakeLists.txt  README.md  start_build.bat  start_build.sh  start_build_ninja.bat
components/atcmd/: CMakeLists.txt  at_cmd_wifi.c  at_cmd_wifi.h  at_list.c
components/fota/: CMakeLists.txt
components/fota/ota_agent/: ota_agent.c  ota_port.c
components/fs/kv/: CMakeLists.txt
components/fs/kv/kv/: ln_kv.c  ln_kv.h
components/fs/kv/kv_port/: ln_kv_key_def.h  ln_kv_port.c
components/fs/nvds/: CMakeLists.txt  nvds.c  nvds.h
components/fs/partition_mgr/: CMakeLists.txt
components/kernel/: CMakeLists.txt
components/kernel/FreeRTOS/: hooks.c
components/kernel/FreeRTOS/Source/include/: FreeRTOSConfig.h
components/libc/: CMakeLists.txt  newlib_stub.c
components/net/dhcpd/: CMakeLists.txt  dhcp_packet.c  dhcpd.c  ip_allocator.c
components/net/httpsclient/: CMakeLists.txt
components/net/iperf/: CMakeLists.txt
components/net/lwip-2.0.3/src/: CMakeLists.txt
components/net/lwip-2.0.3/src/netif/: ethernetif.c
components/net/lwip-2.0.3/src/port/: lwipopts.h
components/net/lwip-2.0.3/src/port/arch/: cc.h  sys_arch.c
components/net/mbedtls/: CMakeLists.txt
components/net/ping/: CMakeLists.txt  ping.c
components/phony/: CMakeLists.txt
components/qcloud_iot_c_sdk/: CMakeLists.txt
components/qcloud_iot_c_sdk/platform/: HAL_Device_freertos.c  HAL_TLS_mbedtls.c  HAL_Timer_freertos.c
components/serial/: CMakeLists.txt
components/smartlink/airkiss/: CMakeLists.txt  airkiss_def.h  airkiss_entry.c  airkiss_entry.h  airkiss_port.c  airkiss_port.h
components/smartlink/smartcfg/: CMakeLists.txt  ln_smartcfg.c  ln_smartcfg_port.c
components/smartlink/softapcfg/: CMakeLists.txt  ln_softapcfg.c
components/smartliving_sdk/src/ref-impl/hal/os/freertos/: hal_awss_xxx.c
components/utils/: CMakeLists.txt  art_string.c  wrap_stdio.c
components/utils/debug/: log.c
components/utils/runtime/: runtime.c
components/wifi/: wifi.h
components/wifi/wifi_manager/: wifi_manager.c
components/wifi/wifi_port/: wifi_port.c  wifi_port.h
doc/: how-to-build-of-cmake.md
lib/: ble_controller.lib  ble_host.lib  drv_ll_ln882x.lib  wifi_ln882x.lib
mcu/driver_ln882x/src/hal/: flash.c
mcu/ln88xx/: ln88xx.h  ln_utils.h
project/wifi_mcu_airkiss_demo/: CMakeLists.txt
project/wifi_mcu_airkiss_demo/app/: main.c  usr_app.c
project/wifi_mcu_airkiss_demo/cfg/: proj_config.h
project/wifi_mcu_airkiss_demo/keil_ln882x_rel/: firmware_XIP.uvoptx  firmware_XIP.uvprojx  wifi_mcu_airkiss_demo.uvoptx  wifi_mcu_airkiss_demo.uvprojx
project/wifi_mcu_basic_example/: CMakeLists.txt
project/wifi_mcu_basic_example/app/: main.c  usr_app.c
project/wifi_mcu_basic_example/gcc/: gcc-jlink.cmake  target-def.cmake
project/wifi_mcu_basic_example/keil_ln882x_rel/: firmware_XIP.uvoptx  firmware_XIP.uvprojx  wifi_mcu_basic_example.uvoptx  wifi_mcu_basic_example.uvprojx
project/wifi_mcu_ota_demo/: CMakeLists.txt
project/wifi_mcu_ota_demo/app/: main.c  usr_app.c
project/wifi_mcu_ota_demo/cfg/: flash_partition_cfg.json  flash_partition_table.h  proj_config.h
project/wifi_mcu_ota_demo/examples/: ota_demo.c
project/wifi_mcu_ota_demo/gcc/: gcc-arm-none-eabi.cmake
project/wifi_mcu_ota_demo/keil_ln882x_rel/: firmware_XIP.uvoptx  firmware_XIP.uvprojx  wifi_mcu_ota_demo.uvoptx  wifi_mcu_ota_demo.uvprojx
project/wifi_mcu_qcloud_misc_demo/: CMakeLists.txt
project/wifi_mcu_qcloud_misc_demo/app/: main.c  ota_mqtt_example.c  temp_cal_app.c  usr_app.c  wifi_setup.c
project/wifi_mcu_qcloud_misc_demo/cfg/: flash_partition_cfg.json  flash_partition_table.h  proj_config.h
project/wifi_mcu_qcloud_misc_demo/docs/: README.md  build_error.md
project/wifi_mcu_qcloud_misc_demo/gcc/: gcc-arm-none-eabi.cmake  ln882x.ld
project/wifi_mcu_qcloud_misc_demo/keil_ln882x_rel/: firmware_XIP.uvoptx  firmware_XIP.uvprojx  wifi_mcu_qcloud_misc_demo.uvoptx  wifi_mcu_qcloud_misc_demo.uvprojx
project/wifi_mcu_qcloud_misc_demo/qcloud_iot_samples/scenarized/: light_data_template_sample.c
project/wifi_mcu_smartconfig_demo/: CMakeLists.txt
project/wifi_mcu_smartconfig_demo/app/: main.c  usr_app.c
project/wifi_mcu_smartconfig_demo/gcc/: ln882x.ld
project/wifi_mcu_smartconfig_demo/keil_ln882x_rel/: firmware_XIP.uvoptx  firmware_XIP.uvprojx  wifi_mcu_smartconfig_demo.uvoptx  wifi_mcu_smartconfig_demo.uvprojx
project/wifi_mcu_smartliving_demo/: CMakeLists.txt
project/wifi_mcu_smartliving_demo/app/: main.c  usr_app.c
project/wifi_mcu_smartliving_demo/cfg/: flash_partition_cfg.json  flash_partition_table.h
project/wifi_mcu_smartliving_demo/gcc/: gcc-arm-none-eabi.cmake  gcc-flags.cmake  ln882x.ld
project/wifi_mcu_softapconfig_demo/: CMakeLists.txt
project/wifi_mcu_softapconfig_demo/app/: main.c  usr_app.c
project/wifi_mcu_softapconfig_demo/gcc/: gcc-postbuild.cmake  ln882x.ld
project/wifi_mcu_softapconfig_demo/keil_ln882x_rel/: firmware_XIP.uvoptx  firmware_XIP.uvprojx  wifi_mcu_softapconfig_demo.uvoptx  wifi_mcu_softapconfig_demo.uvprojx
project/wifi_mcu_tcp_demo/: CMakeLists.txt
project/wifi_mcu_tcp_demo/app/: main.c  usr_app.c
project/wifi_mcu_tcp_demo/cfg/: proj_config.h
project/wifi_mcu_tcp_demo/gcc/: gcc-postbuild.cmake
project/wifi_mcu_tcp_demo/keil_ln882x_rel/: firmware_XIP.uvoptx  firmware_XIP.uvprojx  tcp_demo.uvoptx  tcp_demo.uvprojx
tools/JFlash/: JFlash.ini
tools/gcc_toolchain/: .gitignore
tools/src/mkimage/: .gitignore  Makefile  mkimage.sln  mkimage.vcxproj  mkimage.vcxproj.filters
tools/src/mkimage/include/: app_proc.h  boot_type.h  crc32.h  flash_map_ln88xx.h  fpu_patch.h  types.h
tools/src/mkimage/src/: app_proc.c  boot_proc.c  crc32.c  fpu_patch.c  main.c
